--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ button {
   background-color: transparent;
   outline: none;
 }
+.download-btn:hover {
+  background-color: rgba(34, 33, 33);
+  color: #fff;
+}
 .navbar h2 {
   font-size: 2rem;
   font-weight: 700;
@@ -65,7 +69,7 @@ button {
 }
 .hero-text .contact-btn {
   width: 100px;
-  padding: 15px;
+  padding: 15px 20px;
   font-size: 1.2rem;
   border-radius: 10px;
   color: #fff;
