--- a/style.css
+++ b/style.css
@@ -355,6 +355,10 @@ footer {
   margin-top: 50px;
   border-radius: 10px;
 }
+.footer-text {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
 .social-media img {
   margin-left: 10px;
 }
