--- a/style.css
+++ b/style.css
@@ -110,11 +110,10 @@ section {
   font-weight: 800;
   padding: 10px;
 }
-.dev-text p {
+.same-style {
   color: rgb(93, 96, 99);
-  font-size: 1.2rem;
-  width: 600px;
-  margin: 0 auto;
+  font-size: 1.1rem;
+  line-height: 25px;
 }
 .div-flex {
   display: flex;
@@ -178,9 +177,7 @@ section {
 }
 .inspiration-text p {
   color: rgb(93, 96, 99);
-  font-size: 1rem;
-  letter-spacing: 1px;
-  padding: 10px 0px 30px 0px;
+  font-size: 1.1rem;
 }
 .video {
   width: 100%;
@@ -202,14 +199,6 @@ iframe {
   font-size: 2.5rem;
   font-weight: 800;
   padding: 10px;
-}
-.current-text p {
-  color: rgb(93, 96, 99);
-  font-size: 1.1rem;
-  width: 700px;
-  margin: 0 auto;
-  padding: 10px;
-  line-height: 25px;
 }
 .card-div {
   display: flex;
@@ -272,14 +261,7 @@ h3 {
 .next {
   width: 100%;
 }
-.next-text p {
-  color: rgb(93, 96, 99);
-  font-size: 1.1rem;
-  width: 700px;
-  margin: 0 auto;
-  padding: 10px;
-  line-height: 25px;
-}
+
 .next-card {
   display: flex;
   align-items: center;
